[OAP-TOOLS-221] Update documents for OAP 1.5.0 (#273)